--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
   </properties>
 
   <dependencies>
+    <!--https//mvnrepository.com/artifact/mysql-connector-java-->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.24</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
